--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,5 +1,15 @@
 
-
+buildscript {
+    ext.kotlin_version = '1.6.10' // Use a compatible Kotlin version
+    repositories {
+        google()
+        mavenCentral()
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:7.0.4'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+    }
+}
 
 allprojects {
     repositories {
