--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   get: ^4.6.6
   image_picker: ^1.1.2
+  share_plus: ^4.0.4
 
 dev_dependencies:
   flutter_test:
